<resources>
    <string name="app_name">DOTFLI</string>
    <string name="app_title">DOTFLI - Live TV &amp; Movie</string>
    <string name="app_version">1.3.1</string>
    <string name="contact_email">info@DOTFLI.tv</string>
    <string name="copyright_text">Copyright @ DOTFLI, All right reserved</string>
    <string name="facebook_app_id" translatable="false">1548843298607838</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1548843298607838</string>
    <string name="facebook_application_id" translatable="false">1548843298607838</string>
    <string name="admob_publisher_id">pub-3940256099942544</string>
    <string name="admob_application_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="featured_tv_channels">Featured Tv Channel</string>
    <string name="latest_movie">Latest Movies</string>
    <string name="latest_tv_series">Latest Tv Series</string>
    <string name="more">More</string>
    <string name="movie">Movies</string>
    <string name="live_tv">Live TV</string>
    <string name="tv_series">Series</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="no_item_found">No item found</string>
    <string name="cast_n_crew">Cast and Crew</string>
    <string name="signin">Signin</string>
    <string name="reset">Reset Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="director">Director :</string>
    <string name="comments">Comments</string>
    <string name="your_comments">Your Comments</string>
    <string name="add_comments">Add Comments</string>
    <string name="no_internet">No internet connection !</string>
    <string name="fetch_error">Unable to fetch data</string>
    <string name="login_first">You need to login first</string>
    <string name="comment_empty">Comment can not empty</string>
    <string name="error_toast">Something went wrong ! try later</string>
    <string name="vpn_detected">VPN Detected!!</string>
    <string name="close_vpn">Close VPN and re-open this app.</string>
    <string name="track_selection_title">Change Track</string>
    <string-array name="nav_item_name">
        <item>Home</item>
        <item>Movies</item>
        <item>Series</item>
        <item>Live TV</item>
        <item>Genre</item>
        <item>Country</item>
        <item>Profile</item>
        <item>Favorite</item>
        <item>Subscription</item>
        <item>Downloads</item>
        <item>Settings</item>
        <item>Sign Out</item>

    </string-array>
    <string-array name="nav_item_image">
        <item>outline_home_24</item>
        <item>outline_movie_24</item>
        <item>outline_local_movies_24</item>
        <item>outline_live_tv_24</item>
        <item>outline_folder_24</item>
        <item>outline_outlined_flag_24</item>
        <item>outline_person_24</item>
        <item>outline_favorite_border_24</item>
        <item>ic_subscriptions_black_24dp</item>
        <item>ic_file_download_black_24dp</item>
        <item>outline_settings_24</item>
        <item>outline_lock_24</item>
    </string-array>
    <string-array name="nav_item_name_2">
        <item>Home</item>
        <item>Movies</item>
        <item>Series</item>
        <item>Live TV</item>
        <item>Genre</item>
        <item>Country</item>
        <item>Login</item>
        <item>Settings</item>
    </string-array>
    <string-array name="nav_item_image_2">
        <item>outline_home_24</item>
        <item>outline_movie_24</item>
        <item>outline_local_movies_24</item>
        <item>outline_live_tv_24</item>
        <item>outline_folder_24</item>
        <item>outline_outlined_flag_24</item>
        <item>outline_lock_24</item>
        <item>outline_settings_24</item>
    </string-array>
    <string-array name="paypal_currency_list">
        <item>USD</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>ILS</item>
        <item>JPY</item>
        <item>MXN</item>
        <item>TWD</item>
        <item>NZD</item>
        <item>NOK</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SGD</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>THB</item>
    </string-array>
    <string name="year_range_start">1900</string>
    <string name="year_range_end">2021</string>
    <string name="title_activity_item_show">ItemShowActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="go_premium">Go Premium</string>
    <string name="program_guide">Program Guide</string>
    <string name="live">Live</string>
    <string name="watching_on">Watching live on</string>
    <string name="all_tv_channel">All TV Channels</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tv_channels">Tv Channels</string>
    <string name="watching_catch_up_tv">Watching Catch-up TV</string>
    <string name="deactive_account_text">If you do not want to use this account you can de-active easily.</string>
    <string name="reason_to_deactivate_account">Reason to deactivate account</string>
    <string name="enter_password">Enter Password</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="explore_by_genre">Explore By Genre</string>
    <string name="explore_by_country">Explore By Country</string>
    <string name="share_body">I would like to share this TV &amp; Movie App.  Here you can download this from playstore :\n    https://play.google.com/store/apps/details?id=</string>
    <string name="term_of_services">Term of Services</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="account_deactivate_info"><![CDATA[Your account will be deactivate & only admin can activate again.]]></string>
    <string name="regular_program">Regular Program</string>
    <string name="international">International</string>
    <string name="server">Server</string>
    <string name="_1080p">1080P</string>
    <string name="dummy_name">Jhon Doe</string>
    <string name="others_small">Others</string>
    <string name="no_data_found">No data found.</string>
    <string name="no_subscription_history">No subscription history found.</string>
    <string name="plan">Plan</string>
    <string name="upgrade_membership">Upgrade Membership</string>
    <string name="p_date">P.Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="status">Status</string>
    <string name="by_tapping_the_button_you_agree_to_oxxo_term_amp_condition_and_privacy_policy"><![CDATA[By tapping the button, you agree to Oxxo Term & Condition and Privacy Policy.]]></string>
    <string name="paid_content">You are trying to watch a paid content. Please subscribe a plan first.</string>
    <string name="subscription_required">Subscription Required</string>
    <string name="subscribe_text">Subscribe</string>
    <string name="payment_success">Payment Success.</string>
    <string name="invalid_card">Invalid card</string>
    <string name="subscribe_error">To subscribe a plan, you have to login first.</string>
    <string name="something_went_text">Something went wrong, try again or contact to your developer.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="go_back">Go Back</string>
    <string name="watch_now">Watch Now</string>
    <string name="download">Download</string>
    <string name="select_server">Select Server</string>
    <string name="home">Home</string>
    <string name="all_kids_videos">All Kids Videos</string>
    <string name="all_tv_series">All TV Series</string>
    <string name="unlimited_movies">Unlimited Movies</string>
    <string name="please_select_your_payment_method">Please select your payment method</string>
    <string name="download_appear_text">Your download item will be appear here.  Download item not found.</string>
    <string name="send">Send</string>
    <string name="searcHError_message">Title Or Type can\'t be empty</string>
    <string name="instruction_3">3. Then click on "Connect To TV."</string>
    <string name="dialog_instruction_1">1. Go to your </string>
    <string name="dialog_instruction_2"> app in your phone. </string>
    <string name="dialog_instruction_3">2. Buy a package </string>
    <string name="continue_browsing">Continue browsing</string>
    <string name="type_keyword">Type keyword</string>
    <string name="year_range">Year Range</string>
    <string name="cancel">Cancel</string>
    <string name="tv_category">TV Category</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="all_countries">All Countries</string>
    <string name="all_categories">All Categories</string>
    <string name="external_download">External Download</string>
    <string name="inApp_download">In App Download</string>
    <string name="all_genres">All Genres</string>
    <string name="download_not_permitted">You must have subscription to download this video.</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="user_name_">User Name:</string>
    <string name="active_plan_">Active Plan:</string>
    <string name="email_">Email:</string>
    <string name="expire_date_">Expire Date:</string>
    <string name="active_subscription">Active Subscription</string>
    <string name="no_download_server_found">No download link found</string>
    <string name="no_video_found">No video found</string>
    <string name="failed_to_communicate">Failed to communicate with server. \nPlease check your API configuration</string>
    <string name="please_login_first_to_see_favorite_list">Please login to see favorite list.</string>
    <string name="episode">Episode</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="trailer">Trailer</string>
    <string name="popular_stars">Popular Stars</string>
    <string name="report_intro">Please describe your issue so that we can fix it asap. Note: This feature used to report for current movie, not using for requesting new subtitle/audio in another languages.</string>
    <string name="broken">Broken</string>
    <string name="wrong_movie">Wrong Movie</string>
    <string name="not_synced">Not Synced</string>
    <string name="audio">Audio</string>
    <string name="wrong_subtitle">Wrong Subtitle</string>
    <string name="missing_subtitle">Missing Subtitle</string>
    <string name="your_name">Your Name</string>
    <string name="message">Message</string>
    <string name="movie_name">Movie Name</string>
    <string name="request">Request</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="download_started_on_notification_bar">Download started.</string>
    <string name="clear">Clear</string>
    <string name="enjoy_ad_free_features">Enjoy ad free features</string>
    <string name="unlimited_download">Unlimited download</string>
    <string name="enjoy_premium_content">Enjoy premium content</string>
    <string name="block_unwanted_ads">Block unwanted ads</string>
    <string name="watch_video_ads">WATCH VIDEO ADS</string>
    <string name="ad_is_loading">Ad is loading...</string>
</resources>