<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:paddingTop="5dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/dialog_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:visibility="gone"
                    android:elevation="2dp"
                    android:clickable="true"
                    android:layout_marginRight="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/relative_layout_subscibe_back"
                    android:gravity="left|center"
                    android:layout_width="40dp"
                    android:layout_height="40dp">

                    <RelativeLayout
                        android:background="@drawable/loading_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="0dp"
                            android:layout_marginLeft="0dp"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_arrow_back" />
                    </RelativeLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_baseline_payment_24"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:gravity="center|left"
                        android:text="@string/go_premium"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/payment_methode"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_below="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/loading_bg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_vertical"
                    android:text="Select a payment method"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:padding="5dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_view_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center|left"
                    android:selectAllOnFocus="false"
                    android:text="@string/term_of_services"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:linksClickable="false"
                    android:autoLink="all"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/loading_bg"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <RelativeLayout
                    android:id="@+id/relative_layout_select_method"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_alignParentRight="true"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_arrow_right"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:tint="@color/white" />
                    <TextView
                        android:textSize="7pt"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/continue_watching"
                        android:layout_marginRight="50dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:visibility="visible"
            android:id="@+id/dialog_content"
            android:orientation="vertical"
            android:layout_below="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="13dp"
                android:text="@string/enjoy_ad_free_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="7dp"
                    app:srcCompat="@drawable/ic_download"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:tint="#ccc" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="35dp"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:text="@string/unlimited_download"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="7dp"
                    app:srcCompat="@drawable/ic_media_play_dark"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:tint="#ccc" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="35dp"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    >
                    <TextView
                        android:textSize="14dp"
                        android:gravity="center|left"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/enjoy_premium_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="7dp"
                    app:srcCompat="@drawable/ic_baseline_app_blocking_24"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:tint="#ccc" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="35dp"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    >
                    <TextView
                        android:textSize="14dp"
                        android:gravity="center|left"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/block_unwanted_ads"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </LinearLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_margin="5dp"
                android:visibility="gone"
                android:id="@+id/relative_layout_watch_ads"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ads_button"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/text_view_watch_ads"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/watch_video_ads"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/subscribe_bt"
                android:background="@drawable/subscribe_button"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/text_view_go_pro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:text="SUBSCRIBE NOW"
                    android:textColor="@color/white"
                    android:textSize="7pt"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>